re #602 - Fixed overflow issue on small screens in tables

--- a/application/site/public/theme/mobile/css/default.css
+++ b/application/site/public/theme/mobile/css/default.css
@@ -2386,42 +2386,43 @@ table th, table td {
   padding: 8px;
 }
 
-/* Force table to not be like tables anymore */
-/* line 15, molecules/_table.scss */
+/* line 12, molecules/_table.scss */
 .table {
   max-width: 100%;
   width: 100%;
-  /* Hide table headers (but not display: none;, for accessibility) */
+  border: 0 none;
+  /* Hide table headers */
 }
-/* line 19, molecules/_table.scss */
+/* line 17, molecules/_table.scss */
 .table td {
-  /* Behave  like a "row" */
-  clear: left;
-  float: left;
   border: none;
 }
-/* line 26, molecules/_table.scss */
+/* line 21, molecules/_table.scss */
 .table td:nth-child(n+2) {
   display: none;
 }
-/* line 31, molecules/_table.scss */
+/* line 26, molecules/_table.scss */
 .table thead tr {
   display: none;
 }
 
-/* line 43, molecules/_table.scss */
+/* line 34, molecules/_table.scss */
+.table-striped tbody tr {
+  border-top: 1px solid #dddddd;
+}
+/* line 38, molecules/_table.scss */
 .table-striped tbody > tr:nth-child(odd) {
   background-color: #f9f9f9;
 }
 
 @media screen and (min-width: 767px) {
-  /* line 57, molecules/_table.scss */
+  /* line 45, molecules/_table.scss */
   .table {
     background-color: transparent;
     margin-bottom: 22px;
     border: 0 none;
   }
-  /* line 63, molecules/_table.scss */
+  /* line 51, molecules/_table.scss */
   .table th,
   .table td {
     display: table-cell !important;
@@ -2429,28 +2430,19 @@ table th, table td {
     text-align: left;
     vertical-align: top;
   }
-  /* line 69, molecules/_table.scss */
-  .table td {
-    clear: none;
-    float: none;
-  }
-  /* line 73, molecules/_table.scss */
-  .table tbody tr {
-    border-top: 1px solid #dddddd;
-  }
-  /* line 76, molecules/_table.scss */
+  /* line 58, molecules/_table.scss */
   .table th {
     font-weight: bold;
   }
-  /* line 80, molecules/_table.scss */
+  /* line 62, molecules/_table.scss */
   .table thead tr {
     display: table-row;
   }
-  /* line 84, molecules/_table.scss */
+  /* line 66, molecules/_table.scss */
   .table thead th {
     vertical-align: bottom;
   }
-  /* line 89, molecules/_table.scss */
+  /* line 71, molecules/_table.scss */
   .table thead tr th,
   .table thead tr td {
     border-top: 0;
